<?xml version="1.0"?>
<package format="2">

  <name>mrs_rc_control</name>
  <version>1.0.4</version>
  <description>The mrs_rc_control package.</description>

  <author email="vit.kratky@fel.cvut.cz">Vit Kratky</author>
  <maintainer email="vit.kratky@fel.cvut.cz">Vit Kratky</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_srvs</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>mrs_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>std_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/plugins.xml" />
  </export>

</package>
