<?xml version="1.0"?>
<package format="2">

  <name>mrs_utils</name>
  <version>1.0.0</version>
  <description>The MRS Utils metapackage</description>

  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>

  <depend>tf_reconfigure</depend>
  <depend>tf_estimator</depend>
  <depend>tf_connector</depend>
  <depend>multireconfigure</depend>
  <depend>euler_counter_example</depend>

</package>
