<?xml version="1.0"?>
<package format="2">

  <name>tf_connector</name>
  <version>1.0.0</version>
  <description>A package for connecting two transform trees via root frames</description>

  <maintainer email="matous.vrba@fel.cvut.cz">Matouš Vrba</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>nodelet</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>message_runtime</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>ddynamic_reconfigure</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
  </export>

</package>
